--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonschema": "^1.4.1",
     "mongodb": "^2.2.16",
     "node-uuid": "^1.4.8",
+    "process": "^0.11.10",
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "util": "^0.12.5",
