--- a/lang.yml
+++ b/lang.yml
@@ -3,7 +3,8 @@ en-us:
     forceStop: "Sure to force exit?"
     loadConfigFailed: "Failed to load config file: %s"
     invalidCmd: "Invalid command: %s."
-    serverRunningAt: "Server running at %s:%s."
+    serverStart: "Server running at %s:%s."
+    motd: "[StarRailSimulator] -"
     mainLoopError: "Caught an error in the main loop: %s"
   data:
     loadDatabaseFailed: "Failed to load database: %s"
@@ -14,7 +15,8 @@ zh-cn:
     forceStop: "确定强制退出吗?"
     loadConfigFailed: "无法加载配置文件: %s"
     invalidCmd: "错误的命令: %s."
-    serverRunningAt: "服务器已启动: %s:%s."
+    serverStart: "服务器已启动: %s:%s."
+    motd: "------------------------------------\n [StarRailSimulator] %s\n------------------------------------"
     mainLoopError: "在主循环中捕获了一个错误: %s"
   data:
     loadDatabaseFailed: "无法加载数据库: %s"
