--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json": "^11.0.0",
     "jsonschema": "^1.4.1",
     "mongodb": "^2.2.16",
+    "node-git-current-branch": "^2.0.1",
     "node-uuid": "^1.4.8",
     "process": "^0.11.10",
     "readline": "^1.3.0",
