--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
+    "events": "^3.3.0",
     "express": "^4.18.3",
     "fs": "^0.0.1-security",
     "json": "^11.0.0",
     "jsonschema": "^1.4.1",
-    "mongodb": "^2.2.16",
     "node-git-current-branch": "^2.0.1",
     "node-uuid": "^1.4.8",
     "process": "^0.11.10",
@@ -27,6 +25,7 @@
     "yaml": "^2.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "nodemon": "^3.1.0"
   }
 }
